# OpliEngine

./: CMakeLists.txt  README.md
src/: entry.cpp
src/inc/: helper.h  inc.h  lib.h  stl.h  win.h
src/inc/d3d/: d3d.h  d3dx12.h
src/inc/headers/: window.h
src/lib/: initalise.cpp
